--- a/Projet/Manuel_utilisateur/contenu.tex
+++ b/Projet/Manuel_utilisateur/contenu.tex
@@ -62,7 +62,7 @@ Après validation, une nouvelle fenêtre s'affiche et chaque joueur doit choisir
 
 \begin{figure}
     \centering
-    \includegraphics[height=0.70\textwidth]{figure/choicePeoples.png}
+    \includegraphics[height=0.60\textwidth]{figure/choicePeoples.png}
     \caption{Choix des peuples des joueurs 1 et 2.}
     \label{fig:choicePeoples}
 \end{figure}
@@ -73,12 +73,14 @@ Après cette dernière étape, vous pouvez alors commencer la partie en cliquant
 
 La {\sc Figure}~\ref{fig:game} montre un aperçu de l'interface globale du jeu (avec une carte de taille Medium). Différents éléments sont accessibles et/ou manipulables à partir de cette dernière.
 
-\begin{figure}
-    \centering
-    \includegraphics[height=0.70\textwidth]{figure/choicePeoples.png}
-    \caption{Interface globale du jeu.}
-    \label{fig:game}
-\end{figure}
+\begin{landscape}
+            \begin{figure}
+                \centering
+                \includegraphics[height=0.66\textwidth]{figure/ecranAccueil.png}
+                \caption{Interface globale du jeu.}
+                \label{fig:game}
+            \end{figure}
+        \end{landscape}
 
 \subsubsection{Les données des joueurs}
 
@@ -90,8 +92,8 @@ Au début du jeu, toutes les unités d'un même peuple (et donc d'un même joueu
 
 \begin{figure}
     \centering
-    \includegraphics[height=0.70\textwidth]{figure/choicePeoples.png}
-    \caption{Passage de la souris au-dessus d'une case.}
+    \includegraphics[height=0.70\textwidth]{figure/selectSpace.png}
+    \caption{Au milieu : passage de la souris au-dessus d'une case.}
     \label{fig:onSpace}
 \end{figure}
 
@@ -109,11 +111,11 @@ Un combat a lieu automatiquement lorsqu'une unité a été déplacée sur une ca
 
 \subsubsection{Fin du jeu}
 
-Le jeu se termine de façon automatique si le nombre de tours fixé lors de la création de la partie a été atteint, ou si l'un des joueurs n'a plus aucune unité vivante. Le vainqueur est alors le joueur ayant le nombre de points le plus élevé. Cependant, il est possible de quitter le jeu à tout moment en appuyant sur la touche \og Echap \fg{}, puis en cliquant sur le bouton \og Quit game \fg{} comme sur la {\sc Figure}~\ref{fig:echap}. À partir ce menu, vous pouvez aussi revenir à la partie en cliquant sur \og Continue game \fg{}.
+Le jeu se termine de façon automatique si le nombre de tours fixé lors de la création de la partie a été atteint, ou si l'un des joueurs n'a plus aucune unité vivante. Le vainqueur est alors le joueur ayant le nombre de points le plus élevé. Cependant, il est possible de quitter le jeu à tout moment en appuyant sur la touche \og Echap \fg{}, puis en cliquant sur le bouton \og Quit game \fg{} visible sur la {\sc Figure}~\ref{fig:echap}. À partir ce menu, vous pouvez aussi revenir à la partie en cliquant sur \og Continue game \fg{}.
 
 \begin{figure}
     \centering
-    \includegraphics[height=0.70\textwidth]{figure/choicePeoples.png}
-    \caption{Passage de la souris au-dessus d'une case.}
+    \includegraphics[height=0.70\textwidth]{figure/echap.png}
+    \caption{Menu obtenu par pression de la touche Echap.}
     \label{fig:echap}
 \end{figure}
